k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vatri-backend
  namespace: vatri
  labels:
    app: vatri-backend
spec:
  selector:
    app: vatri-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
