k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vatri-db
  namespace: vatri
  labels:
    app: vatri-db
spec:
  selector:
    app: vatri-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
