k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vatri-frontend
  namespace: vatri
  labels:
    app: vatri-frontend
spec:
  selector:
    app: vatri-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
